# neural-decoder

./: .gitignore  README.md  pyproject.toml
src/neural_decoder/: data_utils.py  eda.ipynb  eda2.ipynb  eval_summary.txt  evaluation_utils.py  model_utils.py  new_models_experiment.ipynb  test_reconstruction.ipynb
src/neural_decoder/configs/: config.py  config.yaml
src/neural_decoder/models/: cnn.py  eeg_clip_basic.py  gat.py  gcn.py  mlp.py  ridge.py
src/neural_decoder/scripts/: dataprep.py  evaluate_reconstruction.py  extract_clip.py  extract_vae.py  generate_image.py  predict_latent.py  test_config.py  train_nn.py  train_ridge.py  train_script.py
