[project]
name = "neural-decoder"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.8.0",
    "datasets>=3.6.0",
    "diffusers>=0.33.1",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.3",
    "mne>=1.9.0",
    "natsort>=8.4.0",
    "numpy>=2.3.0",
    "pandas>=2.2.3",
    "pydantic>=2.11.7",
    "scikit-learn>=1.6.1",
    "torch",
    "transformers>=4.52.4",
]


[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/nightly/cu128"
explicit = true


[tool.uv.sources]
torch = [ { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" } ]
